<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3e50"
    android:orientation="vertical"
    tools:context="hms.ewon.sample.m2websample.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/sample_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/background_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtDeveloperId"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/developer_id_hint"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLength="36"
            />

        <EditText
            android:id="@+id/txtAccount"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/account_hint"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:background="?attr/colorButtonNormal"
            android:onClick="loginToAccount"
            android:text="@string/login_botton_text" />
    </LinearLayout>

</LinearLayout>
